# trustify-scale-testing

./: .gitignore  Cargo.toml  README.md  codecov.yml  empty.json5  graphql-mem-prof.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
benchmarks/: README.md  get-hyperfoil.sh  hyperfoil.yml
benchmarks/trustification/: README.md  trustification-hf.yml
benchmarks/trustify/: README.md  pm-mode-hf.yml
loadtests/: .gitignore  Cargo.toml  README.md
loadtests/src/: main.rs  oidc.rs
replicator/: .gitignore  Cargo.toml  README.md
replicator/src/: main.rs
scenarios/: full-20250323.json5  full-20250604.json5
src/: config.rs  db.rs  graphql.rs  lib.rs  loadtest-graphql-memory.rs  main.rs  oidc.rs  replicator.rs  restapi.rs  scenario.rs  utils.rs  website.rs
src/restapi/: advisory.rs  analysis.rs  misc.rs  purl.rs  sbom.rs  sbom_group.rs  vulnerability.rs
src/scenario/: mod.rs  purl.rs
test-data/advisories/: rhba-2024_11505.json  rhba-2024_11525.json  rhba-2024_11565.json  rhba-2025_0304.json  rhba-2025_0305.json  rhba-2025_0409.json  rhba-2025_0725.json  rhba-2025_1079.json  rhba-2025_12877.json  rhba-2025_14817.json  rhba-2025_15694.json  rhba-2025_15714.json  rhba-2025_15878.json  rhba-2025_1597.json  rhba-2025_1598.json  rhba-2025_1599.json  rhba-2025_1600.json  rhba-2025_16983.json  rhba-2025_16984.json  rhba-2025_2428.json  rhba-2025_2973.json  rhba-2025_2991.json  rhba-2025_4872.json  rhba-2025_5309.json  rhba-2025_6314.json  rhba-2025_6470.json  rhba-2025_6597.json  rhba-2025_6631.json  rhba-2025_9433.json  rhba-2025_9645.json
