[package]
name = "loadtest"
version = "0.1.0"
edition = "2024"
default-run = "loadtest" 

[workspace]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
goose = "0.18.0"
#goose-eggs = "0.5.3-dev"
humantime = "2"
log = "0.4"
openid = "0.17.0"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json5 = "0.2.1"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "uuid", "json"] }
tokio = { version = "1.43.1", features = ["sync"] }
urlencoding = "2"
packageurl = "0.4.2"
rand = "0.9.2"
xz2 = "0.1"


[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]

[patch.crates-io]
#goose = { path = "../goose" }
#goose-eggs = { path = "../../goose-eggs" }

goose = { git = "https://github.com/ctron/goose" }
#goose-eggs = { git = "https://github.com/ctron/goose-eggs", branch = "feature/uptick_deps_1" }
