[workspace]

[package]
name = "loadtest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
goose = "^0.17"
goose-eggs = "0.5.2"
humantime = "2"
log = "0.4"
openid = "0.14"
reqwest = "0.12"
tokio = { version = "1.38.0", features = ["sync"] }

# goose still requires reqwest 0.11
[dependencies.reqwest_0_11]
version = "0.11.27"
package = "reqwest"
